# agents

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agents/: __init__.py  agent.py  middleware.py  providers.py  tools.py  types.py
tests/: test_agent_core.py
