[project]
name = "agents"
version = "0.1.0"
description = "A very simple agent framework for LLM-based agents research, as self-contained as possible"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Antonio Badilla-Olivas" },
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "COM812", "COM818"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
